--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,11 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #e72a50;
 }
 
 header {
-    background-color: #f8f9fa;
+    background-color: #eb3939;
     text-align: center;
     padding: 20px;
 }
